fix(vision): use `Arrays.asList` to create an array from varargs, instead of creating a List containing an array of the varargs with `List.of`